feat(ui): update ui

--- a/client/layout/footer/footer.scss
+++ b/client/layout/footer/footer.scss
@@ -6,4 +6,10 @@
     .container {
         text-align: right;
     }
+
+    .email {
+        color: #999999;
+        font-size: 14px;
+        font-style: italic;
+    }
 }
