--- a/client/layout/header/header.scss
+++ b/client/layout/header/header.scss
@@ -6,6 +6,14 @@ body {
     min-height: 100%;
 }
 
+.is-center {
+    text-align: center;
+}
+
+.has-gray {
+    color: #666666;
+}
+
 div.markdown-body {
     margin-top: 20px;
     background: #ffffff;
