--- a/client/components/NotesList/NotesList.scss
+++ b/client/components/NotesList/NotesList.scss
@@ -19,9 +19,17 @@
         }
 
         .create-time {
-            display: block;
+            display: inline-block;
             font-size: 14px;
-            color: #222;            
+            color: #666666;            
+        }
+
+        .tags {
+            position: relative;
+            margin: 5px 0;
+            .tag {
+                color: #666666;
+            }
         }
     }
 }
